--- a/Medical_Insurance_Predicton.ipynb
+++ b/Medical_Insurance_Predicton.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "250c184e",
    "metadata": {},
    "outputs": [],
@@ -19,8 +19,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3f766b6f",
+   "metadata": {},
+   "source": [
+    "#### Data Loading and Initial Exploration"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "id": "98c9c505",
    "metadata": {},
    "outputs": [],
@@ -31,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "id": "40958b47",
    "metadata": {},
    "outputs": [
@@ -129,7 +137,7 @@
        "4   32    male  28.880         0     no  northwest   3866.85520"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "id": "36bf5a14",
    "metadata": {},
    "outputs": [
@@ -170,8 +178,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0fee6101",
+   "metadata": {},
+   "source": [
+    "--> The dataset contains 1,338 entries with 7 columns: age, sex, bmi, children, smoker, region, and charges.\n",
+    "\n",
+    "--> There are no missing values in any of the columns."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "id": "efac16ae",
    "metadata": {},
    "outputs": [
@@ -275,7 +293,7 @@
        "max      64.000000    53.130000     5.000000  63770.428010"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "id": "63885711",
    "metadata": {},
    "outputs": [
@@ -303,7 +321,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "id": "e3d5d5f9",
    "metadata": {},
    "outputs": [
@@ -324,7 +342,7 @@
        "Index(['age', 'sex', 'bmi', 'children', 'smoker', 'region', 'charges'], dtype='object')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "id": "5919db17",
    "metadata": {},
    "outputs": [
@@ -365,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "id": "df7183c8",
    "metadata": {},
    "outputs": [
@@ -393,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "id": "ec1aca30",
    "metadata": {},
    "outputs": [
@@ -420,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "id": "fbfd4176",
    "metadata": {},
    "outputs": [],
@@ -429,8 +447,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a92302f4",
+   "metadata": {},
+   "source": [
+    "#### Dealing with Outliers"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "id": "8b56aa31",
    "metadata": {},
    "outputs": [
@@ -440,7 +466,7 @@
        "<Axes: ylabel='age'>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -461,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 32,
    "id": "f014c1f8",
    "metadata": {},
    "outputs": [
@@ -471,7 +497,7 @@
        "<Axes: ylabel='bmi'>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -493,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 33,
    "id": "28986429",
    "metadata": {},
    "outputs": [
@@ -520,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 34,
    "id": "55bcfb03",
    "metadata": {},
    "outputs": [],
@@ -533,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 35,
    "id": "10fa501c",
    "metadata": {},
    "outputs": [
@@ -543,7 +569,7 @@
        "<Axes: ylabel='bmi'>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -564,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 36,
    "id": "57730471",
    "metadata": {},
    "outputs": [
@@ -662,7 +688,7 @@
        "4   32    male  28.880         0     no  northwest   3866.85520"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 37,
    "id": "0969ceea",
    "metadata": {},
    "outputs": [
@@ -683,7 +709,7 @@
        "np.float64(0.054780773126998195)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 38,
    "id": "adfb6bd1",
    "metadata": {},
    "outputs": [],
@@ -706,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 39,
    "id": "6fa14986",
    "metadata": {},
    "outputs": [
@@ -716,7 +742,7 @@
        "array(['southwest', 'southeast', 'northwest', 'northeast'], dtype=object)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 40,
    "id": "08fc7e12",
    "metadata": {},
    "outputs": [],
@@ -737,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 41,
    "id": "a5d1ad80",
    "metadata": {},
    "outputs": [
@@ -857,7 +883,7 @@
        "charges   0.298308 -0.058044  0.199063  0.067389  0.787234  0.056070  1.000000"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 42,
    "id": "81f0aece",
    "metadata": {},
    "outputs": [
@@ -892,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 43,
    "id": "a0846a3a",
    "metadata": {},
    "outputs": [],
@@ -903,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 44,
    "id": "0c38295f",
    "metadata": {},
    "outputs": [],
@@ -919,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 45,
    "id": "a32f0549",
    "metadata": {},
    "outputs": [],
@@ -941,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 46,
    "id": "ae14428f",
    "metadata": {},
    "outputs": [
@@ -1050,7 +1076,7 @@
        "9   0.756583  0.721869  0.747"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 47,
    "id": "9fdfd625",
    "metadata": {},
    "outputs": [
@@ -1086,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 48,
    "id": "0f6b9827",
    "metadata": {},
    "outputs": [
@@ -1109,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 49,
    "id": "bd48299a",
    "metadata": {},
    "outputs": [
@@ -1159,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 50,
    "id": "e71bcaec",
    "metadata": {},
    "outputs": [
@@ -1215,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 51,
    "id": "62a451fc",
    "metadata": {},
    "outputs": [
@@ -1316,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 52,
    "id": "7b8879c3",
    "metadata": {},
    "outputs": [
@@ -1685,7 +1711,36 @@
       "c:\\Users\\gotti\\Documents\\GitHub\\medical-insurance-prediction\\venv\\Lib\\site-packages\\sklearn\\ensemble\\_gb.py:672: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)  # TODO: Is this still required?\n",
       "c:\\Users\\gotti\\Documents\\GitHub\\medical-insurance-prediction\\venv\\Lib\\site-packages\\sklearn\\ensemble\\_gb.py:672: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)  # TODO: Is this still required?\n",
+      "  y = column_or_1d(y, warn=True)  # TODO: Is this still required?\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'learning_rate': 0.2, 'n_estimators': 20}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\gotti\\Documents\\GitHub\\medical-insurance-prediction\\venv\\Lib\\site-packages\\sklearn\\ensemble\\_gb.py:672: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)  # TODO: Is this still required?\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8682397447116927\n",
+      "0.9017109716082661\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "c:\\Users\\gotti\\Documents\\GitHub\\medical-insurance-prediction\\venv\\Lib\\site-packages\\sklearn\\ensemble\\_gb.py:672: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)  # TODO: Is this still required?\n",
       "c:\\Users\\gotti\\Documents\\GitHub\\medical-insurance-prediction\\venv\\Lib\\site-packages\\sklearn\\ensemble\\_gb.py:672: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
@@ -1702,18 +1757,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'learning_rate': 0.19, 'n_estimators': 21}\n",
-      "0.8682397447116926\n",
-      "0.9017109716082661\n",
       "0.8606660830850504\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\gotti\\Documents\\GitHub\\medical-insurance-prediction\\venv\\Lib\\site-packages\\sklearn\\ensemble\\_gb.py:672: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)  # TODO: Is this still required?\n"
      ]
     }
    ],
@@ -1736,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 53,
    "id": "b5b07202",
    "metadata": {},
    "outputs": [
@@ -1762,7 +1806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 54,
    "id": "a1c07dbb",
    "metadata": {},
    "outputs": [
@@ -1795,7 +1839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 55,
    "id": "259dd23c",
    "metadata": {},
    "outputs": [],
@@ -1806,7 +1850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 56,
    "id": "a7cf012d",
    "metadata": {},
    "outputs": [
@@ -1873,7 +1917,7 @@
        "region      0.007219"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1884,7 +1928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 57,
    "id": "42edb087",
    "metadata": {},
    "outputs": [],
@@ -1894,7 +1938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 58,
    "id": "2807164d",
    "metadata": {},
    "outputs": [
@@ -1951,7 +1995,7 @@
        "smoker      0.809626"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1962,7 +2006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 59,
    "id": "1360b964",
    "metadata": {},
    "outputs": [],
@@ -1976,7 +2020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 60,
    "id": "250a3bec",
    "metadata": {},
    "outputs": [
@@ -2002,7 +2046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 61,
    "id": "1af8e403",
    "metadata": {},
    "outputs": [
@@ -2012,7 +2056,7 @@
        "array([15836.438], dtype=float32)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2027,7 +2071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 62,
    "id": "450d8ec4",
    "metadata": {},
    "outputs": [],
