--- a/Medical_Insurance_Predicton.ipynb
+++ b/Medical_Insurance_Predicton.ipynb
@@ -720,6 +720,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "17d31224",
+   "metadata": {},
+   "source": [
+    "#### Data Preprocessing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "id": "adfb6bd1",
@@ -728,6 +736,14 @@
    "source": [
     "df['sex'] = df['sex'].map({'male': 0, 'female': 1})\n",
     "df['smoker'] = df['smoker'].map({'yes': 1, 'no': 0})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e086726",
+   "metadata": {},
+   "source": [
+    "This section maps the smoker column from categorical values ('yes', 'no') to numerical values (1, 0) for model compatibility."
    ]
   },
   {
@@ -941,6 +957,14 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from xgboost import XGBRegressor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1417382",
+   "metadata": {},
+   "source": [
+    "#### Model Training"
    ]
   },
   {
