Splitting the Data

--- a/Medical_Insurance_Predicton.ipynb
+++ b/Medical_Insurance_Predicton.ipynb
@@ -1110,6 +1110,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8ee02112",
+   "metadata": {},
+   "source": [
+    "#### Splitting the Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 47,
    "id": "9fdfd625",
